# what-s-the-matter

./: README.md  pyproject.toml  tweet_gathering.ipynb  tweet_processing.ipynb  tweets_and_user_data_EDA.ipynb  twitter_api_data_collection.ipynb
data/: users_data_1.csv
notebooks/: tweet_gathering.ipynb  tweet_processing.ipynb  tweets_and_user_data_EDA.ipynb
requirements/: pyproject.toml
utils/: preprocessing.py
