[tool.poetry]
name = "what-s-the-matter"
version = "0.1.0"
description = ""
authors = ["sabinagio <sabinagiorgiana@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nltk = "^3.7"
textblob = "^0.17.1"
wordcloud = "^1.8.2"
plotly = "^5.10.0"
ipykernel = "^6.15.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
